add Access-Control-Allow-Origin supporting

--- a/SpringBootWebStarterDemo/WebStarterDemo-SpringBoot-1.4/src/main/resources/application.properties
+++ b/SpringBootWebStarterDemo/WebStarterDemo-SpringBoot-1.4/src/main/resources/application.properties
@@ -30,3 +30,7 @@ myapp.name=SpringBoot-WebStarter-Demo
 myapp.version=1.0
 myapp.author=ProfessorTao
 myapp.info=With-SpringBoot-1.4
+
+# security config
+security.allow_origins:http://www.example.com;https://test.example.com
+
